Small Bugfixes + Fix Dependencies for ultrack + environement in pyproject.toml + pre-commit hook
- Automatic Detection if channel or channel_names in metadata
- Fixing dependencies for ultrack
- Adding Readme for viewer
- One big envrionement for all notebooks, optional dependencies using either [stardist_seq] to include cpu stardist, or [colony_seg] for convpaint colony segmentation.

--- a/03_Nucleus_Segmentation.ipynb
+++ b/03_Nucleus_Segmentation.ipynb
@@ -29,9 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "bioimageio_utils.py (2): pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -48,7 +55,7 @@
        "    <div style=\"width: 24px; height: 24px; background-color: #e1e1e1; border: 3px solid #9D9D9D; border-radius: 5px; position: absolute;\"> </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px;\">Client</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-534b3e08-5784-11f0-9124-644ed7669731</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-8d06c994-5d62-11f0-8a0c-644ed7669731</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "\n",
        "        <tr>\n",
@@ -79,7 +86,7 @@
        "    </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px; margin-top: 0px;\">LocalCluster</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">d66e7943</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">cfe97a6f</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
@@ -116,11 +123,11 @@
        "        <div style=\"width: 24px; height: 24px; background-color: #FFF7E5; border: 3px solid #FF6132; border-radius: 5px; position: absolute;\"> </div>\n",
        "        <div style=\"margin-left: 48px;\">\n",
        "            <h3 style=\"margin-bottom: 0px;\">Scheduler</h3>\n",
-       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-56bdf4a0-ee2a-400b-95ff-df21c70b2ad0</p>\n",
+       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-778ab2c4-82f5-4e71-b58f-d3e441b3278d</p>\n",
        "            <table style=\"width: 100%; text-align: left;\">\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Comm:</strong> tcp://127.0.0.1:52818\n",
+       "                        <strong>Comm:</strong> tcp://127.0.0.1:54044\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Workers:</strong> 0 \n",
@@ -162,7 +169,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:52844\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:54064\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -170,7 +177,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:52846/status\" target=\"_blank\">http://127.0.0.1:52846/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:54067/status\" target=\"_blank\">http://127.0.0.1:54067/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 31.91 GiB\n",
@@ -178,13 +185,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:52821\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:54047\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> C:\\Users\\Niesen\\AppData\\Local\\Temp\\dask-scratch-space\\worker-v9hskk6m\n",
+       "                            <strong>Local directory: </strong> C:\\Users\\Niesen\\AppData\\Local\\Temp\\dask-scratch-space\\worker-i75htiv0\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -207,7 +214,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:52838\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:54073\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -215,7 +222,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:52841/status\" target=\"_blank\">http://127.0.0.1:52841/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:54074/status\" target=\"_blank\">http://127.0.0.1:54074/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 31.91 GiB\n",
@@ -223,13 +230,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:52823\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:54049\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> C:\\Users\\Niesen\\AppData\\Local\\Temp\\dask-scratch-space\\worker-8hsjy8bg\n",
+       "                            <strong>Local directory: </strong> C:\\Users\\Niesen\\AppData\\Local\\Temp\\dask-scratch-space\\worker-v6lzi6b1\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -252,7 +259,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:52843\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:54066\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -260,7 +267,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:52845/status\" target=\"_blank\">http://127.0.0.1:52845/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:54071/status\" target=\"_blank\">http://127.0.0.1:54071/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 31.91 GiB\n",
@@ -268,13 +275,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:52825\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:54051\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> C:\\Users\\Niesen\\AppData\\Local\\Temp\\dask-scratch-space\\worker-jri2xgpc\n",
+       "                            <strong>Local directory: </strong> C:\\Users\\Niesen\\AppData\\Local\\Temp\\dask-scratch-space\\worker-8dgwtpun\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -297,7 +304,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:52837\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:54065\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -305,7 +312,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:52839/status\" target=\"_blank\">http://127.0.0.1:52839/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:54069/status\" target=\"_blank\">http://127.0.0.1:54069/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 31.91 GiB\n",
@@ -313,13 +320,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:52827\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:54053\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> C:\\Users\\Niesen\\AppData\\Local\\Temp\\dask-scratch-space\\worker-xsmcb8yv\n",
+       "                            <strong>Local directory: </strong> C:\\Users\\Niesen\\AppData\\Local\\Temp\\dask-scratch-space\\worker-shv3fnb7\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -346,19 +353,12 @@
        "</div>"
       ],
       "text/plain": [
-       "<Client: 'tcp://127.0.0.1:52818' processes=4 threads=16, memory=127.65 GiB>"
+       "<Client: 'tcp://127.0.0.1:54044' processes=4 threads=16, memory=127.65 GiB>"
       ]
      },
      "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-07-02 22:37:54,256 - distributed.nanny - WARNING - Restarting worker\n"
-     ]
     }
    ],
    "source": [
@@ -389,9 +389,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a7c666441a984113b34c61f0d7a55a2b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Main segmentation workflow: load data, segment nuclei, and save results\n",
     "import dask.delayed  # For lazy evaluation of segmentation tasks\n",
@@ -404,7 +419,6 @@
     "import zarr  # For Zarr storage\n",
     "import os  # For file path operations\n",
     "from csbdeep.utils import normalize  # For image normalization\n",
-    "\n",
     "\n",
     "\n",
     "# Utility function to save label arrays to OME-Zarr format\n",
@@ -472,7 +486,12 @@
     "        colony = da.ones((nodes[0].data.shape[0], Y_dim, X_dim), dtype=bool)\n",
     "\n",
     "    raw = nodes[0].data[0]\n",
-    "    H2B_channel = nodes[0].metadata[\"channel_names\"].index(\"H2B\")\n",
+    "    if \"channel_names\" in nodes[0].metadata:\n",
+    "        # Get H2B channel index from metadata\n",
+    "        H2B_channel = nodes[0].metadata[\"channel_names\"].index(\"H2B\")\n",
+    "    elif \"channel\" in nodes[0].metadata:\n",
+    "        # Get H2B channel index from metadata\n",
+    "        H2B_channel = nodes[0].metadata[\"name\"].index(\"H2B\")\n",
     "    raw = raw[:, H2B_channel, :, :]  # Select H2B channel\n",
     "\n",
     "    # Create segmentation tasks for each timepoint/frame\n",
@@ -500,7 +519,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "stardist",
+   "display_name": "cellzarr",
    "language": "python",
    "name": "python3"
   },
@@ -514,7 +533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
