--- a/05_Feature_Extraction_ERK_Oct4.ipynb
+++ b/05_Feature_Extraction_ERK_Oct4.ipynb
@@ -32,13 +32,23 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Niesen\\Desktop\\CellZarr\\.venv\\Lib\\site-packages\\distributed\\node.py:187: UserWarning: Port 8787 is already in use.\n",
+      "Perhaps you already have a cluster running?\n",
+      "Hosting the HTTP server on port 61253 instead\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
        "    <div style=\"width: 24px; height: 24px; background-color: #e1e1e1; border: 3px solid #9D9D9D; border-radius: 5px; position: absolute;\"> </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px;\">Client</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-52607fea-57e3-11f0-9ce4-644ed7669731</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-01a58f8c-5d70-11f0-aae4-644ed7669731</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "\n",
        "        <tr>\n",
@@ -51,7 +61,7 @@
        "        \n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:8787/status\" target=\"_blank\">http://127.0.0.1:8787/status</a>\n",
+       "                    <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:61253/status\" target=\"_blank\">http://127.0.0.1:61253/status</a>\n",
        "                </td>\n",
        "                <td style=\"text-align: left;\"></td>\n",
        "            </tr>\n",
@@ -69,11 +79,11 @@
        "    </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px; margin-top: 0px;\">LocalCluster</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">3440eaf1</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">f5af7a42</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Dashboard:</strong> <a href=\"http://127.0.0.1:8787/status\" target=\"_blank\">http://127.0.0.1:8787/status</a>\n",
+       "                    <strong>Dashboard:</strong> <a href=\"http://127.0.0.1:61253/status\" target=\"_blank\">http://127.0.0.1:61253/status</a>\n",
        "                </td>\n",
        "                <td style=\"text-align: left;\">\n",
        "                    <strong>Workers:</strong> 4\n",
@@ -106,11 +116,11 @@
        "        <div style=\"width: 24px; height: 24px; background-color: #FFF7E5; border: 3px solid #FF6132; border-radius: 5px; position: absolute;\"> </div>\n",
        "        <div style=\"margin-left: 48px;\">\n",
        "            <h3 style=\"margin-bottom: 0px;\">Scheduler</h3>\n",
-       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-64270d1f-57f6-488d-96e3-21eb25de008d</p>\n",
+       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-64f51f9e-fc27-4a7a-ba4b-02ce719b06cf</p>\n",
        "            <table style=\"width: 100%; text-align: left;\">\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Comm:</strong> tcp://127.0.0.1:65521\n",
+       "                        <strong>Comm:</strong> tcp://127.0.0.1:61256\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Workers:</strong> 0 \n",
@@ -118,7 +128,7 @@
        "                </tr>\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Dashboard:</strong> <a href=\"http://127.0.0.1:8787/status\" target=\"_blank\">http://127.0.0.1:8787/status</a>\n",
+       "                        <strong>Dashboard:</strong> <a href=\"http://127.0.0.1:61253/status\" target=\"_blank\">http://127.0.0.1:61253/status</a>\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Total threads:</strong> 0\n",
@@ -152,7 +162,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:49163\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:61277\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -160,7 +170,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:49165/status\" target=\"_blank\">http://127.0.0.1:49165/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:61280/status\" target=\"_blank\">http://127.0.0.1:61280/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 31.91 GiB\n",
@@ -168,13 +178,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:65524\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:61261\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> C:\\Users\\Niesen\\AppData\\Local\\Temp\\dask-scratch-space\\worker-p4qjqdnf\n",
+       "                            <strong>Local directory: </strong> C:\\Users\\Niesen\\AppData\\Local\\Temp\\dask-scratch-space\\worker-2hf89i9s\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -197,7 +207,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:49154\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:61279\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -205,7 +215,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:49161/status\" target=\"_blank\">http://127.0.0.1:49161/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:61284/status\" target=\"_blank\">http://127.0.0.1:61284/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 31.91 GiB\n",
@@ -213,13 +223,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:65526\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:61263\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> C:\\Users\\Niesen\\AppData\\Local\\Temp\\dask-scratch-space\\worker-u1k10jap\n",
+       "                            <strong>Local directory: </strong> C:\\Users\\Niesen\\AppData\\Local\\Temp\\dask-scratch-space\\worker-ntx0xw2l\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -242,7 +252,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:49153\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:61286\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -250,7 +260,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:49157/status\" target=\"_blank\">http://127.0.0.1:49157/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:61287/status\" target=\"_blank\">http://127.0.0.1:61287/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 31.91 GiB\n",
@@ -258,13 +268,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:65528\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:61265\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> C:\\Users\\Niesen\\AppData\\Local\\Temp\\dask-scratch-space\\worker-3w7yxb85\n",
+       "                            <strong>Local directory: </strong> C:\\Users\\Niesen\\AppData\\Local\\Temp\\dask-scratch-space\\worker-3hsjnt2_\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -287,7 +297,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:49164\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:61278\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -295,7 +305,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:49167/status\" target=\"_blank\">http://127.0.0.1:49167/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:61281/status\" target=\"_blank\">http://127.0.0.1:61281/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 31.91 GiB\n",
@@ -303,13 +313,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:65530\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:61267\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> C:\\Users\\Niesen\\AppData\\Local\\Temp\\dask-scratch-space\\worker-dnqd99d3\n",
+       "                            <strong>Local directory: </strong> C:\\Users\\Niesen\\AppData\\Local\\Temp\\dask-scratch-space\\worker-jpl8yr3p\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -336,10 +346,10 @@
        "</div>"
       ],
       "text/plain": [
-       "<Client: 'tcp://127.0.0.1:65521' processes=4 threads=16, memory=127.65 GiB>"
+       "<Client: 'tcp://127.0.0.1:61256' processes=4 threads=16, memory=127.65 GiB>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +384,7 @@
     "    )\n",
     "\n",
     "\n",
-    "MASKS_TO_EXTRACT = [LabelExtractionConfig(\"CNr\", \"CNr2\", True, \"CNr\")]\n",
+    "MASKS_TO_EXTRACT = [LabelExtractionConfig(\"CNr\", \"CNr\", True, \"CNr\")]\n",
     "\n",
     "COMPUTE_CELL_DENSITY = True  # Whether to compute cell density\n",
     "\n",
@@ -387,9 +397,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "df94396ad838411e902b891f330220e4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# --- Required imports for feature extraction and image processing ---\n",
     "import dask\n",
@@ -661,16 +686,35 @@
     "    root = zarr.group(store=store)\n",
     "    nodes = list(ozr.Reader(ozi.parse_url(dest, mode=\"r\"))())\n",
     "    raw = nodes[0].data[0]\n",
-    "    H2B_channel = nodes[0].metadata[\"channel_names\"].index(\"H2B\")\n",
-    "    ERK_channel = nodes[0].metadata[\"channel_names\"].index(\"ERK\")\n",
+    "    # Get channel indices for H2B and ERK\n",
+    "    if \"channel_names\" in nodes[0].metadata:\n",
+    "        H2B_channel = nodes[0].metadata[\"channel_names\"].index(\"H2B\")\n",
+    "        ERK_channel = nodes[0].metadata[\"channel_names\"].index(\"ERK\")\n",
+    "    elif \"channel\" in nodes[0].metadata:\n",
+    "        H2B_channel = nodes[0].metadata[\"name\"].index(\"H2B\")\n",
+    "        ERK_channel = nodes[0].metadata[\"name\"].index(\"ERK\")\n",
+    "    else:\n",
+    "        raise ValueError(\"Channel names not found in metadata.\")\n",
+    "\n",
     "    OCT4_channel = (\n",
-    "        nodes[0].metadata[\"channel_names\"].index(\"Oct4\")\n",
-    "        if \"Oct4\" in nodes[0].metadata[\"channel_names\"]\n",
-    "        else None\n",
+    "        nodes[0].metadata[\"name\"].index(\"Oct4\")\n",
+    "        if \"Oct4\" in nodes[0].metadata[\"name\"]\n",
+    "        else (\n",
+    "            nodes[0].metadata[\"channel_names\"].index(\"Oct4\")\n",
+    "            if \"Oct4\" in nodes[0].metadata[\"channel_names\"]\n",
+    "            else None\n",
+    "        )\n",
     "    )\n",
     "\n",
-    "    i_nucleus = nodes[1].zarr.root_attrs[\"labels\"].index(\"nucleus\")\n",
-    "    nucleus = nodes[i_nucleus + 2].data[0]\n",
+    "    if \"tracked\" in nodes[1].zarr.root_attrs[\"labels\"]:\n",
+    "        i_nucleus = nodes[1].zarr.root_attrs[\"labels\"].index(\"tracked\")\n",
+    "        nucleus = nodes[i_nucleus + 2].data[0]\n",
+    "    elif \"nucleus\" in nodes[1].zarr.root_attrs[\"labels\"]:\n",
+    "        i_nucleus = nodes[1].zarr.root_attrs[\"labels\"].index(\"nucleus\")\n",
+    "        nucleus = nodes[i_nucleus + 2].data[0]\n",
+    "    else:\n",
+    "        raise ValueError(\"Nucleus label not found in metadata.\")\n",
+    "\n",
     "    i_edge = nodes[1].zarr.root_attrs[\"labels\"].index(\"edges\")\n",
     "    edge = nodes[i_edge + 2].data[0]\n",
     "    i_distlabel = nodes[1].zarr.root_attrs[\"labels\"].index(\"distlabel\")\n",
@@ -703,7 +747,11 @@
     "        colony_df = pd.read_parquet(\n",
     "            os.path.join(get_output_path(), f\"{fov}_colony_df.parquet\")\n",
     "        )\n",
-    "        df = df.join(colony_df.set_index(\"colony\"), on=\"colony\")\n",
+    "        df = df.merge(\n",
+    "            colony_df[[\"colony\", \"colony_x\", \"colony_y\", \"colony_area\", \"t\"]],\n",
+    "            on=[\"colony\", \"t\"],\n",
+    "            how=\"left\",\n",
+    "        )\n",
     "\n",
     "    df.to_parquet(os.path.join(get_output_path(), f\"{fov}_df.parquet\"))\n",
     "\n",
@@ -749,7 +797,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CellZarr",
+   "display_name": "cellzarr",
    "language": "python",
    "name": "python3"
   },
@@ -763,7 +811,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
