--- a/01_ND2_to_OME-ZARR.ipynb
+++ b/01_ND2_to_OME-ZARR.ipynb
@@ -42,7 +42,7 @@
        "    <div style=\"width: 24px; height: 24px; background-color: #e1e1e1; border: 3px solid #9D9D9D; border-radius: 5px; position: absolute;\"> </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px;\">Client</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-1cd031c3-5765-11f0-88cc-644ed7669731</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-ccf4a765-5cb2-11f0-844c-644ed7669731</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "\n",
        "        <tr>\n",
@@ -73,7 +73,7 @@
        "    </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px; margin-top: 0px;\">LocalCluster</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">09488bb4</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">a6d53844</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
@@ -110,11 +110,11 @@
        "        <div style=\"width: 24px; height: 24px; background-color: #FFF7E5; border: 3px solid #FF6132; border-radius: 5px; position: absolute;\"> </div>\n",
        "        <div style=\"margin-left: 48px;\">\n",
        "            <h3 style=\"margin-bottom: 0px;\">Scheduler</h3>\n",
-       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-d8612053-990c-479e-84f4-daa4cddff33e</p>\n",
+       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-73c9e9a5-d6a1-482a-abd2-97b0720a7f43</p>\n",
        "            <table style=\"width: 100%; text-align: left;\">\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Comm:</strong> tcp://127.0.0.1:58755\n",
+       "                        <strong>Comm:</strong> tcp://127.0.0.1:58864\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Workers:</strong> 0 \n",
@@ -156,7 +156,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:58773\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:58884\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -164,7 +164,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:58774/status\" target=\"_blank\">http://127.0.0.1:58774/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:58885/status\" target=\"_blank\">http://127.0.0.1:58885/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 31.91 GiB\n",
@@ -172,13 +172,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:58758\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:58867\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> C:\\Users\\Niesen\\AppData\\Local\\Temp\\dask-scratch-space\\worker-h0j1z4nl\n",
+       "                            <strong>Local directory: </strong> C:\\Users\\Niesen\\AppData\\Local\\Temp\\dask-scratch-space\\worker-q5ee7_7v\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -201,7 +201,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:58784\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:58887\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -209,7 +209,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:58785/status\" target=\"_blank\">http://127.0.0.1:58785/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:58889/status\" target=\"_blank\">http://127.0.0.1:58889/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 31.91 GiB\n",
@@ -217,13 +217,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:58760\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:58868\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> C:\\Users\\Niesen\\AppData\\Local\\Temp\\dask-scratch-space\\worker-c4krnqqa\n",
+       "                            <strong>Local directory: </strong> C:\\Users\\Niesen\\AppData\\Local\\Temp\\dask-scratch-space\\worker-r00hptzo\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -246,7 +246,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:58779\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:58888\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -254,7 +254,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:58782/status\" target=\"_blank\">http://127.0.0.1:58782/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:58890/status\" target=\"_blank\">http://127.0.0.1:58890/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 31.91 GiB\n",
@@ -262,13 +262,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:58762\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:58869\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> C:\\Users\\Niesen\\AppData\\Local\\Temp\\dask-scratch-space\\worker-mnw7gzlj\n",
+       "                            <strong>Local directory: </strong> C:\\Users\\Niesen\\AppData\\Local\\Temp\\dask-scratch-space\\worker-_vqc146c\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -291,7 +291,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:58776\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:58893\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -299,7 +299,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:58780/status\" target=\"_blank\">http://127.0.0.1:58780/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:58894/status\" target=\"_blank\">http://127.0.0.1:58894/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 31.91 GiB\n",
@@ -307,13 +307,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:58764\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:58870\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> C:\\Users\\Niesen\\AppData\\Local\\Temp\\dask-scratch-space\\worker-uouc2rag\n",
+       "                            <strong>Local directory: </strong> C:\\Users\\Niesen\\AppData\\Local\\Temp\\dask-scratch-space\\worker-vh3hlh1c\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -340,12 +340,28 @@
        "</div>"
       ],
       "text/plain": [
-       "<Client: 'tcp://127.0.0.1:58755' processes=4 threads=16, memory=127.65 GiB>"
+       "<Client: 'tcp://127.0.0.1:58864' processes=4 threads=16, memory=127.65 GiB>"
       ]
      },
      "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-07-10 07:54:20,843 - tornado.application - ERROR - Uncaught exception GET /status/ws (127.0.0.1)\n",
+      "HTTPServerRequest(protocol='http', host='127.0.0.1:8787', method='GET', uri='/status/ws', version='HTTP/1.1', remote_ip='127.0.0.1')\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\Niesen\\Desktop\\CellZarr\\.venv\\lib\\site-packages\\tornado\\websocket.py\", line 965, in _accept_connection\n",
+      "    open_result = handler.open(*handler.open_args, **handler.open_kwargs)\n",
+      "  File \"c:\\Users\\Niesen\\Desktop\\CellZarr\\.venv\\lib\\site-packages\\tornado\\web.py\", line 3375, in wrapper\n",
+      "    return method(self, *args, **kwargs)\n",
+      "  File \"c:\\Users\\Niesen\\Desktop\\CellZarr\\.venv\\lib\\site-packages\\bokeh\\server\\views\\ws.py\", line 149, in open\n",
+      "    raise ProtocolError(\"Token is expired. Configure the app with a larger value for --session-token-expiration if necessary\")\n",
+      "bokeh.protocol.exceptions.ProtocolError: Token is expired. Configure the app with a larger value for --session-token-expiration if necessary\n"
+     ]
     }
    ],
    "source": [
@@ -505,7 +521,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CellZarr",
+   "display_name": "cellzarr",
    "language": "python",
    "name": "python3"
   },
